--- a/css/megatrailers.css
+++ b/css/megatrailers.css
@@ -5,6 +5,18 @@ body{
     color: #eaeeef;/*cinza claro do texto*/
     margin: 0;
 }
+.font350{
+    font-size: 3.5em;
+}
+.font300{
+    font-size: 3em;
+}
+.font250{
+    font-size: 2.5em;
+}
+.cinza {
+    color: #cbcccd;
+}
 /* Formatação da chamada principal*/
 .chamada{
     background: linear-gradient(rgba(0, 0, 0,.2), rgba(0,0,0,.7)), url(https://img.youtube.com/vi/4r0287tUEgk/maxresdefault.jpg);
@@ -13,30 +25,32 @@ body{
     background-size: cover;
     background-attachment: fixed;
     height: 100vh;
-    display:flex ;
+    display: flex;
+    flex-direction: column;
 }
 .area_chamada{
-   margin: auto;
-   margin-bottom: 150px;
-   text-align: center;
+    margin: auto;
+    margin-bottom: 150px;
+    text-align: center;
 }
 h2{
     margin: 0;
 }
 .titulo{
     font-family: 'Oswald', sans-serif;
-    font-size: 4em;
     text-transform: uppercase;
     line-height: 1.1em;
     font-weight: 400;
     text-shadow: 3px 3px 0 #000000;
 }
-.subtitulo{
-    font-family: 'Oswald', sans-serif;
-    font-size: 3em;
-    text-transform: uppercase;
-    line-height: 1.1em;
-    font-weight: 400;
-    text-shadow: 3px 3px 0 rgba(0,0,0,.8);
-    color: #cbcccd;
+.parte_superior{
+    
+    height: 90px;
+    display: flex;
+    justify-content: space-around;
+    align-content: center;
+    margin-top: 15px;
+}
+.logo > img{
+    width: 250px;
 }
