--- a/css/megatrailers.css
+++ b/css/megatrailers.css
@@ -6,13 +6,22 @@ body{
     margin: 0;
 }
 .font350{
-    font-size: 3.5em;
+    font-size: 3.5em !important;
 }
 .font300{
     font-size: 3em;
 }
+.font200{
+    font-size: 2em !important;
+}
 .font250{
-    font-size: 2.5em;
+    font-size: 2.5em !important;
+}
+.font150{
+    font-size: 1.5em !important;
+}
+.font090{
+    font-size: 0.9em !important;
 }
 .cinza {
     color: #cbcccd;
@@ -31,6 +40,15 @@ body{
 }
 .grande{
     font-size: 180% !important;
+}
+.subtitulo{
+    font-family: 'Open Sans Condensed', sans-serif;
+}
+.esquerda{
+    text-align: left;
+}
+.espaço_abaixo{
+    margin-bottom: 0.5em;
 }
 /* Formatação da chamada principal*/
 .chamada{
@@ -103,10 +121,125 @@ figure{
 figure > img{
     width: 170px;
     height: 300px;
+    position: relative;
+    z-index:1 ;
+    transition: all .5s linear;
+}
+figure > img:hover{
+    opacity: .2;
+}
+figcaption{
+    width: 170px;
+    height: 300px;
+    background: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: -305px;
 }
 .menu{
     margin-bottom: 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+/**seção: posts
+    primeira parte*/
+.icone{
+    color: darkgrey;
+    margin-left: 5px;
+    margin-right: 15px;
+}
+.posts{
+    margin: 50px 2% 0 2%;
+    display: flex;
+    justify-content: space-between;
+}
+.options{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.options > div{
+    font-size: 160% !important;
+    color: darkgrey;
+    margin-bottom: 10px;
+    margin-left: 15px;
+}
+article{
+    display: flex;
+    margin-bottom: 60px;
+}
+iframe{
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, .5);
+}
+.lateral {
+    width: 380px;
+    display: flex;
+    flex-direction: column;
+    
+}
+.pesquisa{
+    font-size: 105%;
+    padding: 10px;
+    border-width: 0;
+    margin: 0 auto;
+
+}
+.pesquisa > input{
+    width: 290px;
+    font-size: inherit;
+    padding: 10px;
+    border-width: inherit;
+    border-radius: 6px 0 0 6px;
+}
+
+.pesquisa > button{
+    font-size: 105%;
+    padding: 10px;
+    border-width: 0;
+    border-radius: 0 6px 6px 0;
+    margin-left: -4px;
+    background-color: #337ab7;
+    color: white;
+    width: 60px;
+}
+.pesquisa > button:hover{
+    cursor: pointer;
+}
+.banner_lateral{
+    margin: 40px auto;
+}
+th,td{
+    padding: 10px;
+}
+thead > tr:last-child,tbody > tr:last-child{
+    border-bottom: 1px solid darkgrey;
+}
+tbody > tr:nth-child(odd){
+    background-color:#223140;
+}
+.continua{
+    border-collapse:collapse ;
+}
+tbody > tr:hover{
+    background-color: darkgray;
+}
+.rodape{
+    padding: 25px;
+    color: white;
+    font-size: 1.5em;
+}
+.rodape li{
+    margin-right:20px; 
+}
+.link{
+    color: inherit;
+    text-decoration: none;
+}
+li .link:hover{
+    text-decoration: underline;
+}
+.link:hover{
+    color: #ffffff;
 }
