--- a/css/megatrailers.css
+++ b/css/megatrailers.css
@@ -50,6 +50,9 @@ body{
 .espaço_abaixo{
     margin-bottom: 0.5em;
 }
+.espaco_acima{
+    margin-top: 0.5em;
+}
 /* Formatação da chamada principal*/
 .chamada{
     background: linear-gradient(rgba(0, 0, 0,.2), rgba(0,0,0,.7)), url(https://img.youtube.com/vi/4r0287tUEgk/maxresdefault.jpg);
@@ -81,11 +84,13 @@ h2{
     display: flex;
     justify-content: center;
     align-content: center;
+}
+.banner > img{
     margin-top: 10px;
 }
 .logo{
     position:absolute;
-    margin-top: 15px;
+    top: 15px;
     left: 10px;
 }
 .logo > img{
@@ -93,7 +98,7 @@ h2{
 }
 .logo_face{
     position: absolute;
-    margin-top: 30px;
+    top: 30px;
     right: 70px;
     display: flex;
     align-items: flex-end;
@@ -106,7 +111,7 @@ h2{
 }
 /*seção miniaturas*/
 .miniaturas{
-    margin-top: -125px;
+    margin-top: -1px;
     padding: 0 2%;
 }
 .figuras{
@@ -242,8 +247,6 @@ li .link:hover{
 }
 .link:hover{
     color: #ffffff;
-}link:hover{
-    color: #ffffff;
 }
 /*pagina detalhe*/
 .player{
@@ -260,12 +263,11 @@ li .link:hover{
     z-index: 1;
     position:relative;
     background: linear-gradient(rgba(0,0,0,.7),rgba(0,0,0,.7));
-    
+    pointer-events: none;
 }
 .area_info{
     display: flex;
     margin: 37vh 2% 0 2%;
-    height: 600px;
 }
 .cartaz_detalhe{
     width: 180px;
@@ -296,16 +298,14 @@ li .link:hover{
 
 .lateral_detalhe{
     width: 300px;
-    height: 100%;
-    background-color: #337ab7;
     margin: 7px;
 }
 .texto_artigo{
     width: 100%;
-    height: 100%;
-    background-color: red;
     margin: 7px;
+    padding-right: 40px;
 }
+
 .star > li{
     margin: 0 2px;
     font-size: 1.5em !important;
@@ -321,4 +321,21 @@ li .link:hover{
 }
 .data_lancamento i{
     margin-right: 5px;
+}
+.titulo_detalhe li{
+    padding: 10px;
+}
+.linha{
+    border-bottom: 1px solid white;
+}
+.descricao{
+    font-family: 'Open Sans', sans-serif;
+    font-size: 0.9em;
+    margin-bottom: 50px;
+}
+.descricao > p:first-child{
+    margin-top: 0;
+}
+.bannerlateral_detalhe{
+    margin-bottom: 30px;
 }
